# pystockfilter

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  pr.yml  release.yml
db/: stockfilter.db
examples/: aapl_optimize_chunked.py  ads_optimize.py  dax_backtest.py  macd_batch_optimize.py  msft_optimize_chunked_seq.py  strategy_run.py
src/pystockfilter/: __init__.py
src/pystockfilter/backtesting/: _plotting.py  _version.py  backtesting.py  lib.py
src/pystockfilter/base/: base_helper.py
src/pystockfilter/data/: __init__.py  local_source.py  pystockdb_source.py  stock_data_source.py  yfinance_source.py  yfinance_source_cache.py
src/pystockfilter/filter/: adx_filter.py  base_filter.py  levermann_score.py  piotroski_score.py  price_target_score.py  rsi_filter.py  stock_is_hot.py  stock_is_hot_secure.py
src/pystockfilter/strategy/: __init__.py  atr_strategy.py  base_strategy.py  bollinger_volume_strategy.py  doji_rsi_strategy.py  ema_cross_close_strategy.py  ema_cross_ema_strategy.py  ema_cross_sma_strategy.py  macd_strategy.py  moving_average_rsi_strategy.py  rsi_strategy.py  sma_cross_close_strategy.py  sma_cross_ema_strategy.py  sma_cross_sma_strategy.py  uo_ema_cross_close_strategy.py  uo_strategy.py  (+1 more)
tests/: conftest.py  helper.py  test_backtest.py  test_base_helper.py  test_batch_optimizer.py  test_benchmark_strategies.py  test_builder.py  test_chunked_optimizer.py  test_ema_cross_close_strategy.py  test_ema_cross_ema_strategy.py  test_local_data_source.py  test_result.py  test_strategies.py  test_uo_strategy.py  test_yfinance_data_source.py
tests/test_data/: AAPL.csv  AMZN.csv  GOOG.csv  MSFT.csv
(+12 files in other folders)
